fix spacing on small screen

--- a/src/css/mystyles.scss
+++ b/src/css/mystyles.scss
@@ -588,7 +588,7 @@ article h2:before {
   main {
       border: none;
       padding: 0;
-      margin: 2rem 2vw 0 2vw;
+      margin: 1.5rem 2vw 0 2vw;
   }
 
   article {
@@ -617,12 +617,6 @@ article h2:before {
 	    padding-top: 1rem;
 	}
     }
-
-    li:first-of-type {
-	margin-top: -25px;
-    }
-
-
 
   }
   .underline-acc {
